Resolve stretched grid display on DOM

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,7 @@ label {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 2fr 2fr;
-  grid-template-rows: 1fr 4fr;
+  /* grid-template-rows: 1fr 4fr; */
 }
 
 .box {
@@ -71,18 +71,24 @@ label {
 }
 
 .navbar {
+  max-height: 150px;
   width: 100%;
   background-color: #007f5f ;
   overflow: auto;
-}
-
-.header-nav {
   grid-column: 2 / 3;
   grid-row: 1 / 1;
   display: flex;
   justify-content: left;
   align-items: center;
 }
+
+/* .header-nav {
+  grid-column: 2 / 3;
+  grid-row: 1 / 1;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+} */
 
 .navbar a {
   padding: 15px;
@@ -137,6 +143,7 @@ label {
 .current-view-title {
   grid-column: 3/ 3;
   grid-row: 1;
+  max-height: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
